<resources>
    <string name="app_name">TechMart15</string>
    <string name="title_section1">About Techmart</string>
    <string name="title_section2">Ad-War</string>
    <string name="title_section3">Code Trek</string>
    <string name="title_section4">Constructo</string>
    <string name="title_section5">Electromatrix</string>
    <string name="title_section6">Focus</string>
    <string name="title_section7">Hitz</string>
    <string name="title_section8">Ingenium</string>
    <string name="title_section9">Lan Gaming</string>
    <string name="title_section10">Full Throttle</string>
    <string name="title_section11">Pioneer</string>
    <string name="title_section13">Quizomania</string>
    <string name="title_section14">R.E.A.C.T</string>
    <string name="title_section15">Robo Bricks</string>
    <string name="title_section16">Reflux</string>
    <string name="title_section17">Rocket War</string>
    <string name="title_section18">Showbuzz</string>
    <string name="title_section19">Spelling Bee</string>
    <string name="title_section20">Tatva</string>
    <string name="title_section21">Treasure Hunt</string>
    <string name="title_section22">About The App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="options_exit_text">Exit</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="images1">Image</string>
    <string name="images2">Image</string>
    <string name="images3">Image</string>
    <string name="images4">Image</string>
    <string name="adwar">Text</string>
    <string name="logo">Logo</string>
    <string name="refluxtextview1">Reflux tackles the problems that the industries and the society face that can be solved through major breakthroughs in chemical engineering. Students will come up with such solutions at Reflux.</string>
    <string name="refluxtextview2">Many environmetal and industrial problems have their solutions hidden somewhere in the books of Chemical Engineering.
One such problem that is both industrial as well as environmetal, is the coalfields in Jharia, Bihar which have been on fire
for the past 98 years. We invite all the chemical engineers to put their intelligence and knowledge in use to find out the most
feasible and plausible idea which might also become the solution to these ever-burning fire at Jharia which has claimed innumerous
lives in the district of Jharia along with depriving India of more than 4billion $ worth of coal deposits
</string>
    <string name="abouttechmarttext">Innovation requires the ability to collaborate and share ideas with people and the courage to challenge the old dogma and the conventional wisdom.</string>
       <string name="treasure">“SEEK AND YOU SHALL FIND”</string>
    <string name="code1">A competitive programming challenge based on algorithms that tests the participant’s ability to code as quickly as possible and deliver the required output. The fulfilment of all the objectives in the least time decide the winner.</string>
    <string name="costo">Research on Engineering and Advanced non Conventional Technology</string>
    <string name="trhnt">Treasure Hunt</string>
    <string name="round1">Round - I</string>
    <string name="round2">Round - II</string>
    <string name="prize">Prize:</string>
    <string name="ayushgupta">-Ayush Gupta</string>
    <string name="codetrekinstruction">INTRODUCTION:</string>
    <string name="codetrekins">Code-Trek is the programming Contest of UIET Kanpur, organized by the TechMart team. It is a prestigious programming contest where each coder whacks his brain to code solutions to the given problems. It is the place where optimization and proficiency matters, skills matter, hard work matters, trying till the very end matters and winning loads of cash prizes matter.</string>
    <string name="eventpro">Event Proceedings:</string>
    <string name="in">Code-Trek is an on-the-spot programming competition. The event unfolds in 2 rounds:</string>
    <string name="is">I Round:</string>
    <string name="istround">•\tA preliminary written round to test your basic programming skills. </string>
    <string name="istround1">•\tThe test paper will consist of Aptitude and basic Coding questions.</string>
    <string name="is1">II Round:</string>
    <string name="istround11">•\tQualified teams can participate in this round only.</string>
    <string name="istround22">•\tThis round will consist of a practical competition in CSE Advanced Lab </string>
    <string name="codetrekrules">Rules and Regulations:</string>
    <string name="ct1">•\tA team can consist of at most 3 members.</string>
    <string name="ct2">•\tOnly teams of which all members are students currently registered in a university shall be eligible for prizes.  However, non-students are also welcome to participate.</string>
    <string name="ct3">•\tTop 10 teams will qualify for the II round</string>
    <string name="ct4">•\tPermissible languages are C, C++, Pascal, Python and Java</string>
    <string name="ct5">•\tCompilers to be used: gcc-4.3.2 for C, g++-4.3.2 for C++, fpc-2.2.4 for pascal, python-2.5 for Python and  javac-1.6.0_12 for Java.</string>
    <string name="ctju">Judgement Criteria:</string>
    <string name="ct6">•\tSolutions have to give the correct output for all the test data for a given problem to be deemed correct. There is no partial credit.</string>
    <string name="ct7">•\tAny team found to be indulging in any form of malpractice will be immediately disqualified.</string>
    <string name="ct8">•\tThe decision of the organizers in declaring the results will be final. No queries in this regard will be entertained.</string>
    <string name="ctprize">Prizes:</string>
    <string name="ctp">To be announced soon</string>
    <string name="coordinator">Coordinator:</string>
    <string name="regi">Registration:</string>
    <string name="remarks">Remarks:</string>
    <string name="ss">Shivani Singh</string>
    <string name="sb">Swati Bhagtani</string>
    <string name="tr1">A team of 4 or 5 members will be given a task and clues, roaming around the campus the team completion the task in minimum time will come up as a winner.</string>
    <string name="tr2">•\tA team is to be registered (Individual participants are not allowed).\n•\tTeam must have 4 or 5 members minimum and maximum 6 members.</string>
    <string name="round">Round:</string>
    <string name="tr3">A 3 round event, treasure will be disclosed in 3rd round.</string>
    <string name="tr5">•\tOne day Event\n•\tNeeds 2 hours approx\n•\tCertificates to all the participants (2nd round onwards)\n•\tMedals and Shields to winners.</string>
    <string name="co">Contacts:\nShivani Singh: (+91)8858069026</string>
    <string name="rules">Rules:</string>
    <string name="web">For More Information, NEWS and Updates Visit: www.tech-mart.in</string>
    <string name="vishalanand">Vishal Anand</string>
    <string name="reactintro">"The word that we have created as a result of the level of thinking we have done thus far, creates problems that cannot be solved at the same level of thinking at which we create them."</string>
    <string name="react1">Research in Engineering and Advanced non Conventional Technology (R.E.A.C.T) is a platform for the young pioneer of Engineering.To review these researches, find application for the same.</string>
    <string name="st">Structures:</string>
    <string name="react2">Submission of review papers.\nParticipants must email their review papers to "reactintechmat@gmail.com" with their registration number.</string>
    <string name="react3">Presentation\nThe finalists will be called to explain their review papers in front of the judges along with a powerpoint presentation.</string>
    <string name="react4">•\tThe review papers must be completely original. Contact from internet can be considered as source but a copy will not be entertained.\n•\tParticipants must submit their review papers along with their name and registration number through email at "reactintechmart@gmail.com".\n•\tThe deadline for submission is 2:00 PM, 8th November 2015.\n•\tParticipants need to submit a hard copy of their review paper to the student coordinator by 8th November\n•\tParticipants need to mention the reference from where they have taken the data.</string>
    <string name="topic">Topics:</string>
    <string name="react5">•\tLeap Motion\n•\tVirtual Reality\n•\tAutomatic Air Suspension System\n•\tAlcohol as Alternative fuel in I.C Engines\n•\tCloud Computing\n•\tCyber Security\n•\tFuel Cell Technology\n•\tRadioactive Waste Management\n•\tSignal &amp; Image Processing\n•\tWireless Communication &amp; Mobile Computing\n•\tLow Power VLSI Design\n•\tSurvival Strategies on Mars</string>
    <string name="ep">Event Proceeding</string>
    <string name="react6">All submitted review papers will be screened by the Technical Committee and the merited participants will be forwarded to final round of the presentation where the finalists will present their review paper in front of the Technical Committee with the help of a powerpoint presentation.</string>
    <string name="react7">Authors of the review papers will have to register on or before 5:00 PM, 8 November 2015\nParticipant fee: Rs. 100\-\nThe participants must submit a soft copy as well as a hard copy of the review paper at the time of registration. The soft copy must be through an email to "reactintechmart@gmail.com".</string>
    <string name="date">Important Dates:</string>
    <string name="react8">•\tLast Date for submission of Full Paper: 8 November 2015\n•\tLast Date for Registration of the Author: 8 November 2015\n•\tNotification on Selection of Papers: 16 November 2015\n•\tEvent Date: 20 November 2015</string>
    <string name="react9">Total prize worth 6000 Rs. to be shared by all the winners.</string>
    <string name="vishalinfo">Contact:\nVishal Anand (Student Coordinator):\n(+91)8009417767\nEmail: vishalanandl177@gmail.com\nShakti Katiyar: (+91)8005017517</string>
    <string name="tc">TECHNICAL COMMITTEE:</string>
    <string name="tc1">•\tDr. Brishti Mishra\n•\tDr. R.N.Katiyar\n•\tDr. Richa\n•\tDr. U.C.Sharma\n•\tDr. Anuj Dixit\n•\tDr. V.K.Kashyap\n•\tDr. Niyati Padi\n•\tEr. Vishal Awasthi\n•\tEr. Alok Kumar\n•\tEr. Hemant Kumar\n•\tEr. Amitesh Anand\n•\tEr. Arpit Srivastava\n•\tEr. Md. Zeeshan</string>
    <string name="oc">ORGANIZING COMMITTEE:</string>
    <string name="tc2">•\tEr. Parul Awasthi\n•\tDr. Richa Verma\n•\tEr. Ajeet Kumar Srivastava\n•\tEr. Amit Katiyar\n•\tDr. Poonam Dixit\n•\tEr. Atul Kumar Agnihotri\n•\tDr. Prabal Pratap\n•\tEr. Ajeet Pratap Singh\n•\tDr. Deepti Agrawal\n•\tEr. Md. Shah Alam</string>
    <string name="tc3">•\tVishal Anand\n•\tShakti Katiyar\n•\tPratibha Singh\n•\tMd. Shahbaaz\n•\tVijya Laxmi Anand</string>
    <string name="sc">STUDENT COMMITTEE:</string>
    <string name="ankur">Ankur Yadav</string>
    <string name="codecon">Contacts:\nAyush Gupta: (+91)9720449004\nAnkur Yadava: (+91)8574962672</string>
    <string name="shakti">Shakti Katiyar</string>
    <string name="regcode">Registration Fees Rs. 30 per haed</string>
</resources>